# metricq-tools

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: package.yml
metricq_tools/: __init__.py  check.py  csv.py  discover.py  energy.py  inspect.py  logging.py  send.py  slurm.py  spy.py  summary.py  utils.py
tests/: test_params.py  test_version.py
